--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
+        "vakata/jstree": "*",
         "2amigos/yii2-ckeditor-widget" : "~1.0"
     },
     "require-dev": {
