--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "vakata/jstree": "*",
-        "2amigos/yii2-ckeditor-widget" : "~1.0"
+        "2amigos/yii2-ckeditor-widget" : "~1.0",
+        "kartik-v/yii2-widget-datepicker": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
