--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "vakata/jstree": "*",
         "2amigos/yii2-ckeditor-widget" : "~1.0",
         "kartik-v/yii2-widget-datepicker": "*",
-        "voskobovich/yii2-many-many-behavior": "~3.0"
+        "voskobovich/yii2-many-many-behavior": "~3.0",
+        "fxp/composer-asset-plugin": "~1.0",
+        "yiisoft/yii2-jui": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
