--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,9 @@
         "2amigos/yii2-ckeditor-widget" : "~1.0",
         "kartik-v/yii2-widget-datepicker": "*",
         "voskobovich/yii2-many-many-behavior": "~3.0",
-        "fxp/composer-asset-plugin": "~1.0",
-        "yiisoft/yii2-jui": "^2.0"
+        "fxp/composer-asset-plugin": "~1.1",
+        "yiisoft/yii2-jui": "^2.0",
+        "costa-rico/yii2-images": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
